Enable Javadoc to be built with Java 9. (markt)
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1810300 13f79535-47bb-0310-9956-ffa450edef68